--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -340,7 +340,7 @@
 						<li>downloadLeaderboardEntriesForUsers(usersID)<br />- Request a maximum of 100 users with only one outstanding call at a time.</li>
 						<li>uploadLeaderboardScore(score, keepBest)<br />- Upload a leaderboard score for the user.</li>
 						<li>getDownloadedLeaderboardEntry(handle, entryCount)<br />- Once all entries are accessed, the data will be freed up and the handle will become invalid, use this to store it.</li>
-						<li>updateLeaderboardHandle(handle)<br />- Update the currently used leaderboard handle.</li>
+						<li>setLeaderboardHandle(handle)<br />- Set the currently used leaderboard handle.</li>
 						<li>getLeaderboardHandle()<br />- Get the currently used leaderboard handle.</li>
 						<li>getLeaderboardEntries()<br />- Get the currently used leaderboard entries.</li>
 						<li>getAchievementAndUnlockTime(name, achieved, unlockTime)<br />- Get the achievement status, and the time it was unlocked if unlocked (in seconds since January 1, 19).</li>
